# SandBox

./: CMakeLists.txt  build.sh
sandboxy/: CMakeLists.txt
sandboxy/include/: Front.hpp  WorldRepresentation.hpp
sandboxy/include/Controller/: UserInput.hpp  WorldView.hpp
sandboxy/include/Data/: CreationPanel.hpp  UserInputCtx.hpp
sandboxy/include/Entity/: Entity.hpp
sandboxy/include/Toolset/: Stoppable.hpp
sandboxy/include/View/: Color.hpp  Component.hpp
sandboxy/sources/: main.cpp  test.cpp
